Fixed issues with inline code and code wrapping to a new line

--- a/static/post-page.css
+++ b/static/post-page.css
@@ -13,13 +13,17 @@ code {
 p code {
     padding: 0.5em;
     max-width: 100%;
-    width: unset;
+    display: inline;
+    line-height: 2.5em;
+    white-space: nowrap;
 }
 
 li code {
     padding: 0.5em;
     max-width: 100%;
-    width: unset;
+    display: inline;
+    line-height: 2.5em;
+    white-space: nowrap;
 }
 
 blockquote {
@@ -29,4 +33,8 @@ blockquote {
     border-radius: .2em;
     margin-left: 1em;
     color: #001335;
+}
+
+img {
+    max-width: 100%;
 }
